Added POC of multer

--- a/community_multer/front/index.html
+++ b/community_multer/front/index.html
@@ -29,11 +29,11 @@
                     </div>
                     <div class="mb-3">
                         <label for="name" class="form-label">Name</label>
-                        <input type="password" class="form-control field" id="name" name="name">
+                        <input type="text" class="form-control field" id="name" name="name">
                     </div>
                     <div class="mb-3">
                         <label for="lastName" class="form-label">Last name</label>
-                        <input type="password" class="form-control field" id="lastName" name="lastName">
+                        <input type="text" class="form-control field" id="lastName" name="lastName">
                     </div>
                     <div class="mb-3">
                         <label for="avatar">Choose a profile picture:</label>
