Added multer implementation

--- a/community_multer/front/index.html
+++ b/community_multer/front/index.html
@@ -16,7 +16,7 @@
         <div class="row">
             <div class="col">
                 <h1>Sign up</h1>
-                <form id="signup-form">
+                <div id="signup-form">
                     <div class="mb-3">
                         <label for="email" class="form-label">Email address</label>
                         <input type="email" class="form-control field" id="email" name="email"
@@ -29,19 +29,19 @@
                     </div>
                     <div class="mb-3">
                         <label for="name" class="form-label">Name</label>
-                        <input type="password" class="form-control field" id="name" name="name">
+                        <input type="text" class="form-control field" id="name" name="name">
                     </div>
                     <div class="mb-3">
                         <label for="lastName" class="form-label">Last name</label>
-                        <input type="password" class="form-control field" id="lastName" name="lastName">
+                        <input type="text" class="form-control field" id="lastName" name="lastName">
                     </div>
                     <div class="mb-3">
                         <label for="avatar">Choose a profile picture:</label>
 
                         <input type="file" id="avatar" name="avatar" accept="image/png, image/jpeg">
                     </div>
-                    <button type="submit" class="btn btn-primary" id="submit-form">Submit</button>
-                </form>
+                    <button type="button" class="btn btn-primary" id="submit-form">Submit</button>
+                </div>
             </div>
             <div class="col"></div>
         </div>
